force-app/main/default/objects/Partner_Portal_Home_Page_Link__c/Partner_Portal_Home_Page_Link__c.object-meta.xml
<CustomObject>
    <description>Captures the Link details to be displayed on the QES Partner Portal Home Page</description>
    <label>Partner Portal Home Page Link</label>
    <nameField>
        <label>Partner Portal Home Page Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Portal Home Page Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>