force-app/main/default/objects/Partner_Portal_Home_Page_Link__c/fields/Available_to_Public_Groups__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Public_Groups__c</fullName>
    <description>Comma separated list of Public Group Ids that would have access to this link. If left blank, all users would have access to this link.</description>
    <inlineHelpText>Comma separated list of Public Group Ids that would have access to this link. If left blank, all users would have access to this link.</inlineHelpText>
    <label>Available to Public Groups</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>