force-app/main/default/objects/Partner_Portal_Home_Page_Link__c/fields/Link_Section__c.field-meta.xml
<CustomField>
    <fullName>Link_Section__c</fullName>
    <label>Link Section</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bottom - Partner Welcome</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Quick Links to Customer Portal</fullName>
            </value>
            <value>
                <fullName>Sidebar - Partner Quicklinks</fullName>
            </value>
            <value>
                <fullName>Sidebar - Partner Welcome</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>