force-app/main/default/objects/Partner_Portal_Home_Page_Link__c/fields/Link_Sub_Section__c.field-meta.xml
<CustomField>
    <fullName>Link_Sub_Section__c</fullName>
    <description>Captures the sub section within the section</description>
    <inlineHelpText>Applicable only for Sidebar-Partner Quicklinks section</inlineHelpText>
    <label>Link Sub Section</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Link_Section__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>My Leads</fullName>
            </value>
            <value>
                <fullName>MDF</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>