force-app/main/default/objects/Partner_Portal_Home_Page_Link__c/fields/Show_on_Home_Page__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Home_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this Link has to be shown on the QES Partner Portal Home Page</description>
    <inlineHelpText>Enable if this Link has to be shown on the QES Partner Portal Home Page</inlineHelpText>
    <label>Show on Home Page</label>
    <type>Checkbox</type>
</CustomField>