force-app/main/default/objects/Partner_Portal_Home_Page_Link__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>URL for the home page link</description>
    <inlineHelpText>Start with either &quot;http&quot;, &quot;htps&quot; or &quot;/&quot;</inlineHelpText>
    <label>URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>