force-app/main/default/objects/Partner_Portal_Home_Page_Link__c/listViews/All_Bottom_Partner_Welcome_Links.listView-meta.xml
<ListView>
    <fullName>All_Bottom_Partner_Welcome_Links</fullName>
    <columns>NAME</columns>
    <columns>URL__c</columns>
    <columns>Link_Section__c</columns>
    <columns>Link_Sub_Section__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Show_on_Home_Page__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Link_Section__c</field>
        <operation>equals</operation>
        <value>Bottom - Partner Welcome</value>
    </filters>
    <label>All Bottom - Partner Welcome Links</label>
    <language>en_US</language>
    <sharedTo>
        <group>SystemAdministrator</group>
    </sharedTo>
</ListView>