force-app/main/default/objects/Partner_Portal_Home_Page_Link__c/listViews/All_Links.listView-meta.xml
<ListView>
    <fullName>All_Links</fullName>
    <columns>NAME</columns>
    <columns>Show_on_Home_Page__c</columns>
    <columns>URL__c</columns>
    <columns>Link_Section__c</columns>
    <columns>Link_Sub_Section__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Home Page Links</label>
    <language>en_US</language>
    <sharedTo>
        <group>SystemAdministrator</group>
    </sharedTo>
</ListView>