force-app/main/default/objects/Partner_Portal_Home_Page_Link__c/listViews/Marketing_Links.listView-meta.xml
<ListView>
    <fullName>Marketing_Links</fullName>
    <columns>NAME</columns>
    <columns>URL__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Link_Section__c</field>
        <operation>equals</operation>
        <value>Marketing</value>
    </filters>
    <label>Marketing Links</label>
    <language>en_US</language>
</ListView>