force-app/main/default/objects/Partner_Portal_Home_Page_Link__c/listViews/Support_Links.listView-meta.xml
<ListView>
    <fullName>Support_Links</fullName>
    <columns>NAME</columns>
    <columns>URL__c</columns>
    <columns>Link_Section__c</columns>
    <columns>Show_on_Home_Page__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Link_Section__c</field>
        <operation>equals</operation>
        <value>Support</value>
    </filters>
    <label>Support Links</label>
    <language>en_US</language>
</ListView>